# obamadb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  empty_src.cpp  grid_search.cpp  main.cpp
data/: .gitignore  README.md  _synth_mc_d0.train.tsv  _synth_mc_d1.probe.tsv  _synth_mc_d1.train.tsv  _synth_mc_d2.probe.tsv  _synth_mc_d2.train.tsv  _synth_mc_s0.probe.tsv  _synth_mc_s0.train.tsv  _synth_svm_f1.test.tsv  _synth_svm_f1.train.tsv  _synth_svm_f2.test.tsv  _synth_svm_f2.train.tsv  _synth_svm_f3.test.tsv  _synth_svm_f3.train.tsv  _synth_svm_s0.train.tsv  _synth_svm_s1.test.tsv  _synth_svm_s1.train.tsv  _synth_svm_s10.train.tsv  _synth_svm_s11.train.tsv  _synth_svm_s12.train.tsv  _synth_svm_s13.train.tsv  _synth_svm_s14.train.tsv  _synth_svm_s15.train.tsv  _synth_svm_s16.train.tsv  _synth_svm_s3.train.tsv  _synth_svm_s4.test.tsv  _synth_svm_s4.train.tsv  _synth_svm_s5.test.tsv  _synth_svm_s5.train.tsv  _synth_svm_s6.test.tsv  _synth_svm_s6.train.tsv  _synthetic_s0.test.tsv  _synthetic_s2.test.tsv  _synthetic_s2.train.tsv  _synthetic_s3.test.tsv  get_datasets.py
ml/: CMakeLists.txt  ConvergenceObserver.h  MCTask.h  MLTask.cpp  MLTask.h  SVMTask.cpp  SVMTask.h
scripts/: df_schema.py  generate_csv_from_vtune_ge_results.py  generate_csv_from_vtune_ge_results.sh  generate_csv_from_vtune_results.py  generate_epoch_times_csv_from_output_files.py  generate_epoch_times_csv_from_vtune_results.py  hotspots_df_schema.py  hwevents_df_schema.py  multilinear_regression.py  read_res.py  requirements.txt  run-exp-mc-speedup.sh  run-exp-mc.py  run-exp-svm-s.sh  run-experiments.sh  run_expt_epoch_cloudlab.sh  run_expt_epoch_small_model_svm.sh  run_expt_epoch_temp_synth_svm.sh  run_expt_only_nav.sh  run_expt_svm.sh  run_vtune_expt_svm.sh  sparse_example.py  svm_example.py  synthetic_data.py  verify.m
storage/: CMakeLists.txt  DataBlock.cpp  DataBlock.h  DataView.cpp  DataView.h  DenseDataBlock.cpp  DenseDataBlock.h  IO.cpp  IO.h  LinearMath.cpp  LinearMath.h  Loader.cpp  Loader.h  MCTask.cpp  MCTask.h  MLTask.cpp  MLTask.h  Matrix.cpp  Matrix.h  SVMTask.cpp  SVMTask.h  SparseDataBlock.cpp  SparseDataBlock.h  StorageConstants.cpp  StorageConstants.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolMacCompatibility.h  UnorderedMatrix.cpp  UnorderedMatrix.h  Utils.cpp  Utils.h  exvector.cpp  exvector.h
storage/tests/: DataBlock_unittest.cpp  DenseDataBlock_unittest.cpp  IO_unittest.cpp  Loader_unittest.cpp  Matrix_unittest.cpp  README.md  SparseDataBlock_unittest.cpp  StorageTestHelpers.cpp  StorageTestHelpers.h  Utils_unittest.cpp
utils/: LogUtils.h  ValidationUtils.h
